@@ -1,6 +1,4 @@
 /*
- * $Id: comm.h,v 1.5 2009-10-19 08:09:07 didg Exp $
- *
  * Copyright (C) Joerg Lenneis 2003
  * All Rights Reserved.  See COPYING.
  */
@@ -8,6 +6,8 @@
 #ifndef CNID_DBD_COMM_H
 #define CNID_DBD_COMM_H 1
 
+/* number of seconds to try reading in readt */
+#define CNID_DBD_TIMEOUT 1
 
 #include <atalk/cnid_dbd_private.h>
 
